--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                                 </div>
                                 <div class="form-control">
                                 <label for="email" id="email-label">E-mail</label><br>
-                                <input type="email" id="email" name="email" placeholder="Enter your mail">
+                                <input type="email" id="email" name="email" placeholder="Enter your mail" required>
                                 <small>Error</small>
                                 </div>
                                 <div class="form-control">
@@ -67,7 +67,7 @@
                                 <input type="radio" id="radio" name="gender" value="other">
                                 <label for="answer3">No</label><br>
                                 <small>Error</small>
-                                <br><br>
+                                <br>
                                 </div>
                                 
                                 
