--- a/submit_confirmation.html
+++ b/submit_confirmation.html
@@ -20,7 +20,7 @@
                             <span>smartworks</span> 
                             
                         </div>
-                        <p>Thank you for getting in touch! <br><br>
+                        <p class="thanks_message">Thank you for getting in touch! <br><br>
                             We appreciate you contacting SmartWorks. <br><br>
                             One of our colleagues will get back in touch with you soon! <br><br>
                             Have a great day!</p>
