--- a/submit_confirmation.html
+++ b/submit_confirmation.html
@@ -20,10 +20,14 @@
                             <span>smartworks</span> 
                             
                         </div>
-                        <p class="thanks_message">Thank you for getting in touch! <br><br>
+
+                        <h1 class="title">Thank you!</h1>
+                        <p>Your submission has been received.</p>
+                        
+                        <!--<p class="thanks_message">Thank you for getting in touch! <br><br>
                             We appreciate you contacting SmartWorks. <br><br>
                             One of our colleagues will get back in touch with you soon! <br><br>
-                            Have a great day!</p>
+                            Have a great day!</p>-->
                     </div>
         </div>    
     </body>
