--- a/submit_confirmation.html
+++ b/submit_confirmation.html
@@ -20,7 +20,7 @@
                             <span>smartworks</span> 
                             
                         </div>
-
+                        <span class="thick">&#10004;</span>
                         <h1 class="title">Thank you!</h1>
                         <p>Your submission has been received.</p>
                         
