--- a/index.html
+++ b/index.html
@@ -67,12 +67,12 @@
                                 <!--radio button -->
                                 <div class="form-control">
                                     <p>Would you reccomend Smart Works to a friend?</p>
-                                    <input type="radio" id="radio" name="choice" value="male">
-                                    <label for="answer1">Yes</label><br>
-                                    <input type="radio" id="radio" name="choice" value="female">
-                                    <label for="answer2">Not sure</label><br>
-                                    <input type="radio" id="radio" name="choice" value="other">
-                                    <label for="answer3">No</label><br>
+                                    <input type="radio" id="radio" name="choice" value="male" onclick="onClick()">
+                                    <label for="radio">Yes</label><br>
+                                    <input type="radio" id="radio1" name="choice" value="female">
+                                    <label for="radio1">Not sure</label><br>
+                                    <input type="radio" id="radio2" name="choice" value="other">
+                                    <label for="radio2">No</label><br>
                                     <small>Error</small>
                                 </div>
                                 
@@ -91,32 +91,32 @@
                                 <div class="form-control">
                                     <p>What would you like to see improved?(Check all that apply)</p>
                                     <input type="checkbox" id="checkbox" name="option1" value="answer1">
-                                    <label for="option1">Smart Projects</label><br>
-                                    <input type="checkbox" id="checkbox" name="option1" value="answer2">
-                                    <label for="option1">Fast Projects</label><br>
-                                    <input type="checkbox" id="checkbox" name="option3" value="answer3">
-                                    <label for="option3">Data Visualization</label><br>
-                                    <input type="checkbox" id="checkbox" name="option4" value="answer4">
-                                    <label for="option4">Challenges</label><br>
-                                    <input type="checkbox" id="checkbox" name="option5" value="answer5">
-                                    <label for="option5">Open Source Community</label><br>
-                                    <input type="checkbox" id="checkbox" name="option6" value="answer6">
-                                    <label for="option6">Gitter help rooms</label><br>
-                                    <input type="checkbox" id="checkbox" name="option7" value="answer7">
-                                    <label for="option7">Videos</label><br>
-                                    <input type="checkbox" id="checkbox" name="option8" value="answer8">
-                                    <label for="option8">City Meetups</label><br>
-                                    <input type="checkbox" id="checkbox" name="option9" value="answer9">
+                                    <label for="checkbox">Smart Projects</label><br>
+                                    <input type="checkbox" id="checkbox1" name="option1" value="answer2">
+                                    <label for="checkbox1">Fast Projects</label><br>
+                                    <input type="checkbox" id="checkbox2" name="option3" value="answer3">
+                                    <label for="checkbox2">Data Visualization</label><br>
+                                    <input type="checkbox" id="checkbox3" name="option4" value="answer4">
+                                    <label for="checkbox3">Challenges</label><br>
+                                    <input type="checkbox" id="checkbox4" name="option5" value="answer5">
+                                    <label for="checkbox4">Open Source Community</label><br>
+                                    <input type="checkbox" id="checkbox5" name="option6" value="answer6">
+                                    <label for="checkbox5">Gitter help rooms</label><br>
+                                    <input type="checkbox" id="checkbox6" name="option7" value="answer7">
+                                    <label for="checkbox6">Videos</label><br>
+                                    <input type="checkbox" id="checkbox7" name="option8" value="answer8">
+                                    <label for="checkbox7">City Meetups</label><br>
+                                    <input type="checkbox" id="checkbox8" name="option9" value="answer9">
                                     <label for="option9">Wiki</label><br>
-                                    <input type="checkbox" id="checkbox" name="option10" value="answer10">
-                                    <label for="option10">Forum</label><br>
+                                    <input type="checkbox" id="checkbox9" name="option10" value="answer10">
+                                    <label for="checkbox9">Forum</label><br>
                                     <small>Error</small>
                                 </div>
 
                                 
                                 <!--comments textarea-->
                                 <p>Any comments or suggestions?</p>
-                                    <textarea id="textarea" name="comments" rows="6" cols="45" placeholder="Enter your text here" required>Have suggestions? Write them down over here!</textarea>
+                                    <textarea id="textarea" name="comments" rows="6" cols="100" placeholder="Have suggestions? Write them down over here!"></textarea>
                                     <br><br>
 
                                 <!--submit button-->
