--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                                     <input type="checkbox" id="checkbox7" name="option8" value="answer8">
                                     <label for="checkbox7">City Meetups</label><br>
                                     <input type="checkbox" id="checkbox8" name="option9" value="answer9">
-                                    <label for="option9">Wiki</label><br>
+                                    <label for="checkbox8">Wiki</label><br>
                                     <input type="checkbox" id="checkbox9" name="option10" value="answer10">
                                     <label for="checkbox9">Forum</label><br>
                                     <small>Error</small>
