--- a/submit_confirmation.html
+++ b/submit_confirmation.html
@@ -2,8 +2,8 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Survey Form</title>
-        <meta name="description" content="Survey Form">
+        <title>Submit Confirmation</title>
+        <meta name="description" content="Submit Confirmation">
         <meta name="author" content="Ma Tko">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" type="text/css" href="style.css">
